# CI312-Graphic-Algorithms

./: CMakeLists.txt  README.md
DataStructures/: CMakeLists.txt  DataStructures.cpp  MyFace.cpp  MyFace.h  MyVertex.cpp  MyVertex.h
DualTetrahedron/: CMakeLists.txt  DualTetrahedron.cpp
Geometry/: CMakeLists.txt  Geometry.cpp
Polyhedra/: CMakeLists.txt  Polyhedra.cpp
SimpleExample/: CMakeLists.txt  SimpleExample.cpp
